fixed overflow ellipsis problem on search-item

--- a/react-app/src/components/SearchBar/SearchBar.css
+++ b/react-app/src/components/SearchBar/SearchBar.css
@@ -33,7 +33,8 @@
 **************************************************/
 .search-filter {
   width: 300px;
-  max-height: 400px;
+  max-width: 300px;
+  max-height: 280px;
   margin: 0;
   padding: 0;
   border: 2px solid var(--color-light-gray);
@@ -51,9 +52,8 @@
   top: 50px; left: 0; right: 0;
   margin: 0 auto;
   z-index: 10;
-  
+  display: flex;
   flex-direction: column;
-  align-items: center;
 }
 .search-filter::-webkit-scrollbar {
   width: 6px;
@@ -81,31 +81,20 @@
 }
 
 
-.search-item {
-  max-width: 280px;
-  /* max-width: 514px; */
+span.search-item {
+  width: 100%;
   min-height: 36px;
-  padding: 0 5px;
+  padding: 10px 6px;
   
   text-align: left;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   background: none;
-  
-  display: flex;
-  align-items: center;
   cursor: pointer;
+  
   transition: background .15s;
 }
 .search-item:hover {
   background: rgb(179, 179, 249);
 }
-
-
-/* do you need this here to cover all bases? */
-/* .search_filter * {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-} */
